--- a/3-Recommendation/Recommendations_with_IBM.ipynb
+++ b/3-Recommendation/Recommendations_with_IBM.ipynb
@@ -2950,7 +2950,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Provide your response here.**"
+    "**If we were given a new user , we can give recommendation on the basis popular articles as we don't have any prior knowledge about the user so get_top_article_ids can be applied .**"
    ]
   },
   {
@@ -3273,7 +3273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Provide your response here.**"
+    "**Here matrice are fully filled, so we can use SVD but if we were having a sparse matrix with lots of Null values then SVD would not be possible and we would need to use FunkSVD .**"
    ]
   },
   {
@@ -3692,7 +3692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -3701,7 +3701,7 @@
        "0"
       ]
      },
-     "execution_count": 538,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
